--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
+  firebase_auth: ^4.2.9
+  firebase_core: ^2.7.0
+  flutter_signin_button: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +65,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/boy.jpeg
-    - assets/images/mango.jpg
-    - assets/images/beach.jpeg
+    - assets/images/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
