--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_core: ^2.7.0
   flutter_signin_button: ^2.0.0
   cloud_firestore: ^4.4.3
+  image_picker: ^0.8.6+4
+  firebase_storage: ^11.0.14
+  camera: ^0.10.3+2
 
 dev_dependencies:
   flutter_test:
